<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/postocombustivel"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPrecoGasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preço_gasolina"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etPrecoGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/informe_o_preço_da_gasolina"
        app:layout_constraintTop_toBottomOf="@id/tvPrecoGasolina"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvConsumoGasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumo_gasolina_km_l"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etPrecoGasolina"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etConsumoGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/informe_o_consumo_da_gasolina"
        app:layout_constraintTop_toBottomOf="@id/tvConsumoGasolina"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPrecoAlcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preço_alcool"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etConsumoGasolina"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etPrecoAlcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/informe_o_preço_do_alcool"
        app:layout_constraintTop_toBottomOf="@id/tvPrecoAlcool"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvConsumoAlcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumo_alcool_km_l"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etPrecoAlcool"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etConsumoAlcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/informe_o_consumo_do_alcool"
        app:layout_constraintTop_toBottomOf="@id/tvConsumoAlcool"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/resultado"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etConsumoAlcool"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>